--- a/page4.html
+++ b/page4.html
@@ -35,17 +35,17 @@ body {font-family: "Lato", sans-serif}
 
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
-    <img src="IU_1.jpg" style="width:100%">     
+    <img src="IU_1.jpg" style="width:80%">     
     </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="Lilac.jpg" style="width:80%">    
+    <img src="Lilac.jpg" style="width:60%">    
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="IU_3.jpg" style="width:80%">
      </div>
     </div>
   </div>
-
+	</div>
   <!-- BTS -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="BTS">
     <h2 class="w3-wide">About IU</h2>
