--- a/page4.html
+++ b/page4.html
@@ -34,25 +34,24 @@ body {font-family: "Lato", sans-serif}
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
   <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
-    <img src="IU_1.jpg" style="width:100%">     
+     <div class="mySlides w3-display-container w3-center">
+    <img src="IU_1.jpg" style="width:100%">
     </div>
   <div class="mySlides w3-display-container w3-center">
-    <img src="Lilac.jpg" style="width:100%">    
+    <img src="Lilac.jpg" style="width:100%">
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="IU_3.jpg" style="width:100%">
-   
+    
     </div>
   </div>
-
   <!-- BTS -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="BTS">
     <h2 class="w3-wide">About IU</h2>
     <p class="w3-opacity"><i>IU</i></p>
     <p class="w3-justify">IU (아이유) is a South Korean solo singer and actress who performs on the sweeter side of the K-pop spectrum. She usually focuses on ballads and light pop. She choosed the stage name IU -- derived from "I" and "you" to symbolize unity. Lee debuted in the late 2000s with early efforts Lost & Found.She had her breakthrough in 2010 with the chart-topping "Good Day" from her third EP, Real. She remained a fixture at the top of the Korean charts into the 2020s with hits such as 2011's Last Fantasy, 2019's Love Poem, and 2021's platinum-certified Lilac. In addition to her success in Korea, she also branched out into the Japanese market and, in 2020, scored her first number one in the U.S. with "Eight."</p>
 
-<p class="w3-justify">Besides her successful career in singing, she also ventured into hosting radio and TV shows. The multi-talented artist is also active in the field of acting. She had a supporting role in the teen drama <i>Dream High</i>.Besides this, she also has several other minor appearances in several TV series. Later on, she starred in <i>You're the Best, Lee Soon-shin, Pretty Man, The Producers, Moon Lovers: Scarlet Heart Ryeo, My Mister, Persona and Hotel del Luna in the lead roles.</i>
+<p class="w3-justify">Besides her successful career in singing, she also ventured into hosting radio and TV shows. The multi-talented artist is also active in the field of acting. She had a supporting role in the teen drama <i>Dream High</i>.Besides this, she also has several other minor appearances in several TV series. Later on, she starred in <i>You're the Best, Lee Soon-shin, Pretty Man, The Producers, Moon Lovers: Scarlet Heart Ryeo, My Mister, Persona and Hotel del Luna in the lead roles.</i></p>
 
 
    <div class="w3-row w3-padding-32">
@@ -72,7 +71,7 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-quarter">
         <b><p>Hotel de Luna (2019)</p></b>
         <img src="Hotel de Luna.jpg" class="w3-round" alt="Hotel de Luna" style="width:80%">
-      </div>
+     
        </div>
     </div>
   </div>   
