--- a/page4.html
+++ b/page4.html
@@ -62,7 +62,7 @@ body {font-family: "Lato", sans-serif}
       </div>
       <div class="w3-quarter">
         <b><p>You Are the Best!Lee Soon-Shin (2013)</p></b>
-        <img src="You are the best.jpg" class="w3-round w3-margin-bottom" alt="You are the best"          style="width:80%">
+        <img src="You are the Best.jpg" class="w3-round w3-margin-bottom" alt="You are the best"          style="width:80%">
       </div>
       <div class="w3-quarter">
         <b><p>Moon Lovers: Scarlet Heart Ryeo (2016)</p></b>
